--- a/homework/HW-Lec_10.ipynb
+++ b/homework/HW-Lec_10.ipynb
@@ -66,23 +66,21 @@
     "        k = k + 1\n",
     "plt.subplots(figsize=(10,10))\n",
     "plt.scatter(x, y)\n",
-    "#plt.savefig('circular raw data.png')\n",
     "plt.show()\n",
     "\n",
     "plt.subplots(figsize=(10,10))\n",
     "yf = np.fft.ifft(y)\n",
     "plt.plot(x,np.abs(yf))\n",
-    "#plt.savefig('circular ifft data.png')\n",
     "plt.show"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bbdccc84",
+   "id": "a84f77a1",
    "metadata": {},
    "source": [
     "https://seattlecentral.edu/qelp/sets/065/065.html\n",
-    "The data above is representative of the US underground natural gas storage from April 1997 to March 2000 in billions of cubic feet. "
+    "The data above is representative of the US underground natural gas storage over each week from April 1997 to March 2000 in billions of cubic feet. The fourier transform of this data can be seen in the second graph and is given over the course of those same weeks in billions of cubic feet * weeks. This data is benefitted by FFT as it can be used to minimize the data and show its frequecy in a more concise format."
    ]
   }
  ],
