--- a/Projects/Final RNG Project.ipynb
+++ b/Projects/Final RNG Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe947d83",
+   "id": "9cc00343",
    "metadata": {},
    "source": [
     "LCG, Linear congruential generator, is obtained by formula X_(n+1)=(A*X_n+B) mod(C). The advantage of this method is that the length of the interval can be controlled by adjusting the size of C, and it can be known that it runs fast and requires less memory to retain state.The disadvantage is that this method is a periodic formula, and the parameters of the formula can be easily cracked."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "19ac96a7",
+   "id": "adc5b759",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "371de1c9",
+   "id": "162f2dae",
    "metadata": {},
    "source": [
     "Itamaraca is a newer method of psuedo-random number generation which uses absolute value functions to generate a series of psuedo-random numbers using the three previous generated numbers. \n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1c2f96c5",
+   "id": "b3d7f26a",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "860d5b69",
+   "id": "e4bf5c25",
    "metadata": {},
    "source": [
     "Overall the Ita random generator creates a good set of random numbers. Compared with numpy's random function, the graph of Ita has much larger gaps, which shows a worse distribution."
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "110b9db6",
+   "id": "d6b0d368",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3128e485",
+   "id": "51dd90a8",
    "metadata": {},
    "source": [
     " # Middle-Square Weyl Sequence RNG\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5925168b",
+   "id": "4afedb09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3f51baf5",
+   "id": "58949d46",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0f66ddda",
+   "id": "2224a6ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8d800664",
+   "id": "6215dfac",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9d355503",
+   "id": "a542325e",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bad90720",
+   "id": "8e537213",
    "metadata": {},
    "source": [
     "# Squares RNG"
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27a59f35",
+   "id": "9eedb13f",
    "metadata": {},
    "source": [
     "Squares RNG is the more recent work of Bernard Widynski and is a counter-based version of Middle-Square Weyl Sequence RNG.\n",
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12eb6a8c",
+   "id": "e8a9ae79",
    "metadata": {},
    "source": [
     "The main benefit of CBRNGs versus other tradition pseudorandom number generators (PRNGs) is that while PRNGs need to calculate every value sequentially, CBRNGs can calculate any value independently without knowing the previous value in the sequence."
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4db7fbbe",
+   "id": "e57f441f",
    "metadata": {},
    "source": [
     "For example a PRNG must calculate all values of n=0 through n=4 before finding n=5 where a CBRNG can simply calculate n=5 without any other calculations. This made CBRNGs the choice for multi-core CPUs and GPUs as each could work on its own calculations independently."
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4667da4",
+   "id": "305f41fc",
    "metadata": {},
    "source": [
     "Squares takes a single input value and then returns a value between 0 and 0xffffffff(4294967295) by using a single key and several mathmatical and bit operations. Much like the Middle-Square Weyl Sequence RNG we are limited in our abilities and must format in C."
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f52f11d8",
+   "id": "ab6c5d1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,25 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "89132070",
+   "id": "1c853e6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3510494666\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(squares(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0b479a39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,8 +573,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "78fbee44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3595112961, 3929498559, 58969675, 1109041340, 2795206382, 3510494666]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(allsquares(6))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "8af43b42",
+   "id": "73bdc11d",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c92f0638",
+   "id": "7f58031e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d9ce8dca",
+   "id": "b07fa335",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5dafd68c",
+   "id": "8ef8ea20",
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbf42302",
+   "id": "17a0f49e",
    "metadata": {},
    "outputs": [],
    "source": []
